# nonogram

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/src/: app.module.ts  main.ts  swagger-config.ts  swagger.ts
backend/src/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
backend/src/config/: configuration.ts  validation.ts
backend/src/data/: packs.ts  puzzles.ts
backend/src/health/: health.controller.ts  health.service.spec.ts  health.service.ts
backend/src/packs/: packs.controller.ts  packs.service.ts
backend/src/progress/: progress.controller.ts  progress.module.ts  progress.repository.ts  progress.service.ts
backend/src/puzzles/: puzzles.controller.ts  puzzles.service.ts
docs/: analytics_liveops.md  backend_infra.md  backlog.md  monetization_ads.md  product_scope.md  progress-storage.md  puzzle_core.md  web_client.md
infra/: README.md
puzzle-core/: Cargo.toml  README.md
puzzle-core/benches/: solver.rs
puzzle-core/bindings/: solve.ts
puzzle-core/samples/: smiley.json
puzzle-core/src/: lib.rs
scripts/: verify.sh
web/: .env.example  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
web/public/: manifest.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: ApiStatusBadge.tsx  EditorClient.tsx  PuzzleClient.tsx
web/src/data/: mockBoards.ts  mockPacks.ts
web/src/lib/: api.ts  auth.ts  baseUrl.ts  wasmSolver.ts
(+33 files in other folders)
